--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,18 @@
     "db:dev:sqlite": "npm run db:use:sqlite && prisma migrate dev && prisma generate",
     "db:push:pg": "npm run db:use:pg && prisma db push && prisma generate",
     "db:dev:pg": "npm run db:use:pg && prisma migrate deploy && prisma generate",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "db:seed": "node --loader ts-node/esm prisma/seed.mjs"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -26,6 +32,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "prisma": "^6.14.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
@@ -34,7 +41,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -42,6 +51,7 @@
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.6.0"
   }
 }
